<resources>
    <string name="server">PHP</string>
    <string name="app_name">KyThuat</string>

    <string name="btn_ok">確定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_clean">清空</string>
    <string name="btn_delete">刪除</string>
    <string name="btn_print">列印</string>
    <string name="btn_date">日期</string>
    <string name="btn_time">時間</string>
    <string name="btn_insert">新增</string>
    <string name="btn_query">查詢</string>
    <string name="btn_upload">結轉</string>
    <string name="btn_query1">查詢</string>
    <string name="btn_capnhat">Cập nhật</string>
    <string name="btn_search1">DS chưa kiểm tra</string>
    <string name="btn_search2">DS xe hư</string>
    <string name="btn_cancel1">Xóa đã chuyển</string>
    <string name="btn_cameranew">Chụp hình</string>
    <string name="btn_cameraold">Chụp hình cải thiện</string>
    <string name="btn_signature">Ký tên</string>
    <string name="btn_info">Search</string>
    <string name="btn_search_sig">Kiểm tra ds ký tên</string>

    <string name="tt_stt">序號</string>
    <string name="tt_hangmuc">項目</string>
    <string name="tt_mvl">料號</string>
    <string name="tt_tenVL">物料名稱</string>
    <string name="tt_quycach">規格</string>
    <string name="tt_kho">倉庫</string>
    <string name="tt_solo">批號</string>
    <string name="tt_soluong">數量</string>
    <string name="tt_ngay">日期</string>
    <string name="tt_gio">時間</string>
    <string name="tt_ca">班別</string>
    <string name="tt_tenNV">人員名稱</string>
    <string name="tt_manv">人員代號</string>
    <string name="tt_bophan">部門名稱</string>

    <string name="M01">資料上傳</string>
    <string name="M02">確定上傳資料?</string>
    <string name="M03">上傳成功</string>
    <string name="M04">上傳失敗</string>
    <string name="M05">確定刪除資料?</string>

    /*Menu Button*/
    <string name="btn_KT01">設備管理稽核評分表</string>
    <string name="btn_KT02">柴油堆高機檢查稽查表</string>
    <string name="btn_KT03">廢水站操作日誌</string>
    <string name="btn_KT04">廢水水質自動,連續監測站操作日記</string>
    <string name="btn_KT05">拖板車檢查稽查表</string>
    <string name="btn_KT06">電動堆高機檢查稽查表</string>
    <string name="btn_KT07">能源耗用記錄</string>
    <string name="Change_Data">更新報表項目</string>

    /* activity_main */
    <string name="main_id">帳號：</string>
    <string name="main_pwd">密碼：</string>
    <string name="main_ok">確定</string>
    <string name="main_cancel">取消</string>
    <string name="main_E01">請輸入帳號</string>
    <string name="main_E02">帳號密碼錯誤</string>
    <string name="main_E03">連線錯誤</string>
    <string name="main_language">語言</string>
    <string name="main_stay_logged">保持登入</string>

    /*check version*/
    <string name="ver_curr_version">當前版本: </string>
    <string name="ver_new_version">新版本：%1$s (mã %2$d)</string>
    <string name="ver_install">請安裝!</string>
    <string name="ver_soft_update">軟件更新</string>
    <string name="ver_update">更新</string>
    <string name="ver_downloading">正在下載</string>
    <string name="ver_please_wait">請稍後...</string>
    <string name="ver_no_update">目前版本為最新版本</string>
    <string name="ver_check_fail">無法檢查更新，請稍後重試</string>
    <string name="ver_cancel">取消</string>
    <string name="ver_download_fail">下載失敗</string>

    <string name="E01">帳號密碼錯誤</string>
    <string name="E02">連線錯誤</string>
    <string name="E10">請輸入帳號</string>

    /*KT03*/
    <string name="Ca1">第1班</string>
    <string name="Ca2">第2班</string>
    <string name="vitridondep">清潔、整理位置</string>
    <string name="danhgia">審核</string>
    <string name="tot">好</string>
    <string name="khongtot">不好</string>
    <string name="ghichu">備註</string>
    <string name="Danhsach">已稽查名冊</string>
    <string name="sogio">Số giờ hoạt động</string>

    <string name="tenmaymoc">清潔、整理位置</string>
    <string name="tinhtrang">審核</string>
    <string name="hoatdongbinhthuong">好</string>
    <string name="hong">不好</string>
    <string name="ghichuhm2">備註</string>

    <string name="daydo">儀器量測範圍</string>
    <string name="nongdo">標準藥劑濃度</string>
    <string name="hansudung">標準藥劑使用期限</string>
    <string name="giatri">儀器校正結果</string>
    <string name="saiso">誤差(%)</string>


    /*KT04*/
    <string name="hangsanxuat">製造商</string>
    <string name="thongtin">輸入信息</string>


    /*KT02_activity*/
    <string name="ERRORtvStatus_false">出現錯誤，不能插入資料到tc_fad_file</string>
    <string name="ERRORtvStatus_true">更新資料成功</string>
    <string name="ERRORtvStatus_errorins">資料已更新</string>
    <string name="ERRORtvStatus_false_sig">出現錯誤，不能插入資料到tc_fao_file</string>

    /*Fragment_KT02*/
    <string name="maso1">項次</string>
    <string name="chitiet1">檢查內容</string>
    <string name="diemdatkh">考核評分</string>
    <string name="loai1">特優</string>
    <string name="loai2">優</string>
    <string name="loai3">可</string>
    <string name="loai4">差</string>
    <string name="loai5">很差</string>
    <string name="loai6">特差</string>
    <string name="ghichu1">問題補充說明</string>
    <string name="trangthai">Trạng thái</string>
    /*loginKT02*/
    <string name="soxe">機台號碼</string>
    <string name="bophan">負責部門</string>
    <string name="tenbophan">部門名稱</string>
    <string name="btninsert">執行</string>
    <string name="diem">總分</string>
    <string name="kiemtra">Xe hư</string>
    <string name="kyten1">Ký tên</string>
    <string name="kyten2">Thông tin</string>

    /*kt01bophan*/
    <string name="btn_addnew">新增</string>
    <string name="btn_updatesever">結轉</string>
    <string name="tt_xacthuc">報到</string>
    <string name="ls01">项目编号</string>
    <string name="ls02">日期</string>
    <string name="ls03">部分</string>
    <string name="ls04">观点</string>
    <string name="ls05">考核内容</string>
    <string name="ls06">部門名稱</string>
    <string name="ls07">小組</string>

    /*kt01fragment*/
    <string name="hang1">考核項目</string>
    <string name="hang2">編碼</string>
    <string name="hang3">考核内容</string>
    <string name="hang4">權重分數</string>
    <string name="hang5">及格分数</string>
    <string name="hang6">拍个照</string>
    /*kt01listbophan*/
    <string name="lk01">考核項目</string>
    <string name="lk02">部分</string>
    <string name="lk03">零件名称</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />

    /*Fragment_KT07*/
    <string name="tc_cea03">序號</string>
    <string name="tc_cea04">廠別</string>
    <string name="tc_cea05_tc_cea09">編號/棟別</string>
    <string name="tc_ceb04_old">上次時鐘數據</string>
    <string name="tc_ceb04_diff">消費金額</string>
    <string name="tc_cea05">編號</string>
    <string name="tc_cea06">目標值</string>
    <string name="tc_cea07">備住</string>
    <string name="tc_cea08">單位</string>
    <string name="tc_cea09">棟別</string>
    <string name="tc_ceb04">錶度數</string>
    <string name="tc_ceb05">當天用量</string>
    <string name= "checkbox">組合查找條件</string>
    <string name="tc_ceb07">備註</string>
</resources>