<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KT01.KT01_Fragment_Create">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maso1"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/maso1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/chitiet1"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.4"
            android:text="@string/chitiet1"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/diemdatkh"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diemdatkh"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loai1"
                    style="@style/title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loai1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/loai2"
                    style="@style/title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loai2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/loai3"
                    style="@style/title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loai3"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/loai4"
                    style="@style/title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loai4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/loai5"
                    style="@style/title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loai5"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/loai6"
                    style="@style/title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loai6"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/ghichu1"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ghichu1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_button"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hang6"
            android:textSize="18sp" />
    </LinearLayout>
    <!--RecyclerView-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

</LinearLayout>