<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv4_stt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:hint="@string/tt_stt"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/border_listview"/>

    <TextView
        android:id="@+id/tv4_ten"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingLeft="5dp"
        android:gravity="center|left"
        android:hint="@string/tenmaymoc"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/border_listview"/>

    <TextView
        android:id="@+id/tv4_dayDo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:paddingLeft="5dp"
        android:gravity="center|left"
        android:hint="@string/daydo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/border_listview"/>

    <EditText
        android:id="@+id/edt4_nongDo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:hint="@string/nongdo"
        android:textSize="18sp"
        android:background="@drawable/border_listview"/>

    <EditText
        android:id="@+id/edt4_hanSuDung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:hint="@string/hansudung"
        android:textSize="18sp"
        android:background="@drawable/border_listview"/>

    <EditText
        android:id="@+id/edt4_giaTri"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:hint="@string/giatri"
        android:textSize="18sp"
        android:background="@drawable/border_listview"/>

    <EditText
        android:id="@+id/edt4_saiSo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:hint="@string/saiso"
        android:textSize="18sp"
        android:background="@drawable/border_listview"/>
</LinearLayout>