<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".KT02.KT02_Search_fia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/tt_stt"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/soxe"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bophan"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/tenbophan"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/tt_ngay"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/ghichu"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/trangthai"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="18sp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_search02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>