<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".KT02.Search_Signature_KT02">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tt_stt"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/soxe"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/bophan"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/tenbophan"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="@string/tt_ngay"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/tt_manv"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/kyten2"
            android:textStyle="bold"
            android:theme="@style/title"
            android:textSize="15sp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_search_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>